implemented bucket sort

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="third-party/css/bootstrap.min.css">
 		<link rel="stylesheet" href="resources/css/style.min.css">
 		<script type="text/javascript" src="third-party/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="resources/js/functions.min.js"></script>
 	</head>
 	<body>
 		<div class="container">
